# llm_rag_simple

./: .gitignore  README.md  pyproject.toml
src/api/: deps.py  main.py
src/api/routes/: stock.py
src/chains/: qa.py
src/clients/: chroma_client.py  gemini_client.py
src/embeddings/: google_embed.py
src/llm_poc/: __main__.py  llm.py  pipeline.py
src/prompts/: prompt_task.py  system_prompt.py
src/retrievers/: stock_market.py
src/schemas/: forecast.py
src/tools/: stock_market_tool.py
src/utils/: loader.py  text_split.py
