[tool.poetry]
name = "simple rag"
version = "0.1.0"
description = "RAG system for docs"
authors = ["Mikhail Ozernov <ozzygogogo@gmail.com>"]
readme = "README.md"
packages = [{ include = "llm_poc", from = "src" }]

[tool.poetry.dependencies]
dotenv = "^0.9.9"
python = "^3.10"
langchain = "^0.3"
langchain-core = "^0.3"
langchain-community = "^0.3"
langchain-google-genai = "^2.1"
google-genai = "^1"
langchain-chroma = "^0.2.6"
pypdf="5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llm-poc = "llm_poc.__main__:main"
